--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@astrojs/tailwind": "^5.0.2",
 		"astro": "^3.6.0",
 		"astro-icon": "^0.8.1",
+		"node-html-parser": "^6.1.11",
 		"tailwindcss": "^3.3.5"
 	}
 }
