--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "astro build",
+		"build": "astro check && astro build && pagefind --site dist && xcopy /E /I dist\\pagefind public\\pagefind",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.3.1",
 		"@astrojs/tailwind": "^5.0.2",
 		"astro": "^3.6.0",
 		"astro-icon": "^0.8.1",
 		"node-html-parser": "^6.1.11",
-		"tailwindcss": "^3.3.5"
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.3.2"
+	},
+	"devDependencies": {
+		"pagefind": "^1.0.4"
 	}
 }
