--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"astro": "^3.6.0",
 		"astro-icon": "^0.8.1",
 		"node-html-parser": "^6.1.11",
+		"sharp": "^0.33.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.3.2"
 	},
