--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "astro check && astro build && pagefind --site dist && xcopy /E /I dist\\pagefind public\\pagefind",
+		"build": "astro check && astro build && pagefind --site dist",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
