--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.3.1",
+		"@astrojs/tailwind": "^5.0.2",
 		"astro": "^3.6.0",
 		"astro-icon": "^0.8.1",
 		"node-html-parser": "^6.1.11",
